# verifiable-lockmanager

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
.githooks/: pre-commit  pre-push
.githooks/pre-commit.d/: 01_static-analysis.sh  02_code-formatting.sh
.githooks/pre-push.d/: 01_doxygen.sh  02_sanitizer_check.sh
apps/: client_main.cpp  server_main.cpp
benchmark/: CMakeLists.txt  README.md  benchmark.cpp  start_demand_paging.sh  start_insecure.sh  start_out_of_enclave.sh
benchmark/client/: CMakeLists.txt  client.cpp
benchmark/evaluation/: demand_paging.csv  demand_paging_simple.csv  demand_paging_threads.csv  demand_pagingv2.csv  evaluation.ipynb  insecure.csv  insecureLockTableSize100k.csv  insecureLockTableSize200k.csv  insecure_simplev2.csv  insecure_threads.csv  insecure_threadsv2.csv  ooe_before_optimizations.csv  stackHeapSizes.csv  stackHeapSizesOutOfEnclave.csv
benchmark/evaluation/first_evalution/: demand_paging_simple_big_tcs.csv  insecure_simple.csv
benchmark/include/: client.h
benchmark/paging-overhead/: Makefile  app  result.txt
benchmark/paging-overhead/App/: Enclave_u.c  Enclave_u.h
benchmark/paging-overhead/Insecure/: App.c  app  result_read.txt  result_write.txt
benchmark/paging-overhead/SGX_Enclave/: app  result_read.txt  result_write.txt
benchmark/paging-overhead/SGX_Enclave/App/: App.cpp
benchmark/paging-overhead/SGX_Enclave/Enclave/: Enclave.h
benchmark/paging-overhead/SGX_Untrusted/: Makefile  app  result_read.txt  result_write.txt
benchmark/paging-overhead/SGX_Untrusted/App/: App.cpp  Enclave_u.c  Enclave_u.h
benchmark/paging-overhead/SGX_Untrusted/Enclave/: Enclave_t.c  Enclave_t.h
benchmark/proto/: lockmanager.proto
cmake/: FindSGX.cmake  test_macros.cmake
demand-paging/: CMakeLists.txt  README.md
demand-paging-switchless/: CMakeLists.txt
demand-paging-switchless/include/: common.h  lock.h
demand-paging-switchless/src/: lock.cpp
demand-paging-switchless/tests/: lockmanager-t.cpp
demand-paging/.devcontainer/: devcontainer.json
demand-paging/apps/: CMakeLists.txt  client_main.cpp  server_main.cpp
demand-paging/cmake/: trustdble_configure.cmake
demand-paging/evaluation/: CMakeLists.txt  benchmark.cpp  evaluation.sh  out.csv  sealed_data_blob.txt
demand-paging/include/: common.h  lock.h  transaction.h
demand-paging/src/: CMakeLists.txt  lock.cpp  transaction.cpp
demand-paging/src/proto/: CMakeLists.txt  lockmanager.proto
demand-paging/tests/: CMakeLists.txt  hashtable-t.cpp  lock-t.cpp  lockmanager-t.cpp  server-t.cpp  transaction-t.cpp
docs/: CMakeLists.txt  class_diagram.plan  mainpage.md
evaluation/: README.md
evaluation/experiment-results/: demand_paging.csv  evaluation.ipynb  insecure.csv  out_of_enclave.csv  stack_heap_sizes_out_of_enclave.csv  untrusted.csv
evaluation/untrusted/: CMakeLists.txt  README.md
evaluation/untrusted/apps/: client_main.cpp
evaluation/untrusted/evaluation/: CMakeLists.txt  out.csv
evaluation/untrusted/include/: hashtable.h  lock.h  transaction.h
evaluation/untrusted/src/: CMakeLists.txt  hashtable.cpp  lock.cpp
evaluation/untrusted/src/client/: client.cpp
evaluation/untrusted/src/enclave/: enclave.cpp
evaluation/untrusted/src/lockmanager/: errors.cpp  ocalls.cpp
evaluation/untrusted/src/proto/: lockmanager.proto
evaluation/untrusted/src/server/: server.cpp
experiments/demand-paging/: CMakeLists.txt
experiments/insecure-lockmanager/: CMakeLists.txt
experiments/insecure-lockmanager/apps/: client_main.cpp
experiments/insecure-lockmanager/include/lockmanager/: lockmanager.h
experiments/insecure-lockmanager/include/server/: server.h
experiments/insecure-lockmanager/src/client/: CMakeLists.txt
experiments/insecure-lockmanager/src/lockmanager/: CMakeLists.txt  lockmanager.cpp  transaction.cpp
experiments/insecure-lockmanager/src/server/: CMakeLists.txt  server.cpp
include/: Base64Encoding.h  common.h
include/client/: client.h
include/enclave/: Enclave.h  enclave.h  hashtable.h
include/lockmanager/: ErrorSupport.h  FileIO.h  files.h  lock.h  lockmanager.h  transaction.h
include/server/: server.h
insecure-lockmanager/: CMakeLists.txt  README.md
insecure-lockmanager/apps/: client_main.cpp  server_main.cpp
insecure-lockmanager/evaluation/: benchmark.cpp  evaluation.sh  out.csv
insecure-lockmanager/include/: base64-encoding.h  common.h
insecure-lockmanager/src/: CMakeLists.txt
insecure-lockmanager/src/client/: client.cpp
insecure-lockmanager/src/enclave/: enclave.cpp  enclave.edl  transaction.cpp
insecure-lockmanager/src/lockmanager/: enclave.cpp  hashtable.cpp  lock.cpp  lockmanager.cpp  transaction.cpp
insecure-lockmanager/src/proto/: lockmanager.proto
insecure-lockmanager/src/server/: server.cpp
insecure-lockmanager/tests/: CMakeLists.txt  benchmark.cpp  lock-t.cpp  lockmanager-t.cpp  server-t.cpp  transaction-t.cpp
out-of-enclave/: CMakeLists.txt  README.md
out-of-enclave/.devcontainer/: Dockerfile
out-of-enclave/apps/: client_main.cpp
out-of-enclave/docs/: CMakeLists.txt  class_diagram.plan
out-of-enclave/evaluation/: benchmark.cpp  out.csv  (+1 more)
out-of-enclave/src/: CMakeLists.txt  hashtable.cpp  lock.cpp  transaction.cpp
out-of-enclave/src/client/: client.cpp
out-of-enclave/src/enclave/: enclave.config.xml  enclave.cpp  enclave.edl  integrity_verification.cpp  lock.cpp  lock_signatures.cpp  transaction.cpp
out-of-enclave/src/lockmanager/: files.cpp  lockmanager.cpp
out-of-enclave/src/server/: server.cpp
src/: Base64Encoding.cpp  CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/enclave/: Enclave.cpp  enclave.cpp  enclave.edl  transaction.cpp
src/lockmanager/: CMakeLists.txt  ErrorSupport.cpp  FileIO.cpp  errors.cpp  lock.cpp  lockmanager.cpp  transaction.cpp
src/proto/: lockmanager.proto
src/server/: CMakeLists.txt  server.cpp
switchless/: CMakeLists.txt
switchless/cmake/: FindSGX.cmake
tests/: CMakeLists.txt  example-t.cpp  lock-t.cpp  lockmanager-t.cpp  server-t.cpp  transaction-t.cpp
untrusted/src/server/: CMakeLists.txt
(+73 files in other folders)
